# timesheets

./: .cliff.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.mod  go.sum  log.py  main.go  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: build.yaml  commitlint.yaml  test.yaml
cmd/: config.go  sync.go  version.go
internal/arrays/: arrays.go
internal/cli/: cli.go  flag.go
internal/config/: config.go
internal/constants/: constants.go
internal/entries/: entries.go  sources.go  targets.go
internal/utils/: utils.go
testdata/: config.yaml
timesheets/: __init__.py  __main__.py  __version__.py  cli.py  constants.py
timesheets/connectors/: __init__.py  core.py  kronos.py  toggl.py
