[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timesheets"
authors = [
    { name = "Márton Torner", email = "torner.marton@gmail.com" }
]
description = "Timesheet synchronizer"
readme = "README.md"
license-files = { paths = ["LICENSE"] }
keywords = [
    "timesheets",
    "jira",
    "toggl",
    "kronos",
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]
dynamic = ["version"]

requires-python = "~=3.12"
dependencies = [
    "pytz==2024.1",
    "requests==2.32.3",
    "click==8.1.7",
]

[project.optional-dependencies]
development = [
    "ruff==0.5.4"
]
publish = [
    "twine==5.1.1"
]

[project.urls]
Repository = "https://github.com/tornermarton/timesheets"
Documentation = "https://github.com/tornermarton/timesheets/docs"
Issues = "https://github.com/tornermarton/timesheets/issues"

[project.scripts]
timesheets = "timesheets.__main__:main"

[tool.hatch.version]
path = "timesheets/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["timesheets"]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D211", "D212", "COM812", "ISC001"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
# Use `\n` line endings for all files
line-ending = "lf"
