[metadata]
name = timesheets
version = file:VERSION
author = Márton Torner
author_email = torner.marton@gmail.com
description = Timesheet synchronizer script
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/tornermarton/timesheets
project_urls =
    Documentation=https://github.com/tornermarton/timesheets/docs
    Bug Tracker=https://github.com/tornermarton/timesheets/issues
    Source Code=https://github.com/tornermarton/timesheets
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Environment :: Console
keywords =
    timesheets
    jira
    toggl
    kronos


[options]
zip_safe = False
include_package_data = True
python_requires = ~=3.10
packages = find:
install_requires = file:requirements.txt


[options.packages.find]
include =
    timesheets*


[options.entry_points]
console_scripts=
    timesheets=timesheets.__main__:main


[bdist_wheel]
universal = 1
python-tag = py3


[easy_install]
